fix popularPreview overflow

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ main {
 }
 
 #submitForm {
-    width: 134px;
+    min-width: 134px;
     border: none;
     background-color: var(--primary-color);
     border-radius: 0px 15px 15px 0px;
@@ -197,7 +197,7 @@ main {
 }
 
 .searchResult .searchIconResult {
-    width: 22px;
+    min-width: 22px;
     height: 22px;
     border: 1px solid var(--tertiary-color);
     display: inline-flex;
@@ -543,10 +543,6 @@ footer {
         margin-left: 0px;
         margin-right: 20px;
     }
-    
-    #popularContainer {
-        flex-flow: column wrap;
-    }
 
     .popularPreview {
         width: 100%;
@@ -582,7 +578,7 @@ footer {
         text-align: center;
     }
 
-    nav {
+    nav, #navButtonsContainer a {
         padding: 20px 0px 20px 0px;
     }
 
@@ -612,7 +608,7 @@ footer {
     }
 
     #submitForm {
-        width: 52px;
+        min-width: 52px;
         height: 52px;
         border-radius: 15px 15px 15px 15px;
         margin-left: -15px;
